--- a/Retrives-Manage-Books/src/App.css
+++ b/Retrives-Manage-Books/src/App.css
@@ -1,42 +1,54 @@
-#root {
-  max-width: 1280px;
+.container {
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+}
+.main {
+  background-color: #9f9f9f;
+  padding: 30px;
+  padding-bottom: 70px;
+  margin-bottom: 20px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+button.active {
+  padding: 10px 20px;
+  background: #000;
+  color: #fff;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-wrapper {
+  max-width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  margin: 20px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.btn {
+  background: #9f9f9f;
+  padding: 10px 20px;
+  border-radius: 10px;
 }
 
-.card {
-  padding: 2em;
+/* form css start from here */
+.main-wrap {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
 
-.read-the-docs {
-  color: #888;
+label {
+  margin: 5px 0;
+}
+
+input {
+  padding: 20px;
+  margin-bottom: 5px;
+  border-radius: 1 0px;
+}
+
+.form-wrapper {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
 }
