--- a/Retrives-Manage-Books/src/App.css
+++ b/Retrives-Manage-Books/src/App.css
@@ -2,8 +2,16 @@
   width: 100%;
   margin: 0 auto;
 }
+img {
+  width: 200px;
+}
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
 .main {
-  background-color: #9f9f9f;
   padding: 30px;
   padding-bottom: 70px;
   margin-bottom: 20px;
@@ -28,8 +36,16 @@ button.active {
   background: #9f9f9f;
   padding: 10px 20px;
   border-radius: 10px;
+  border: none;
 }
 
+.btn-primary {
+  background-color: rgb(84, 129, 244);
+  width: 100px;
+  height: 50px;
+  color: #fff;
+  border-radius: 10px;
+}
 /* form css start from here */
 .main-wrap {
   display: grid;
@@ -42,13 +58,38 @@ label {
 }
 
 input {
-  padding: 20px;
+  padding: 10px;
   margin-bottom: 5px;
-  border-radius: 1 0px;
+  border-radius: 10px;
 }
 
 .form-wrapper {
   display: flex;
   gap: 5px;
   flex-direction: column;
+}
+.searchbar {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.searchbar input {
+  min-width: 70%;
+  margin: 20px 0;
+}
+
+.comment-box {
+  display: flex;
+}
+
+.book-card {
+  width: 300px;
+  height: 400px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 20px 0;
+}
+.book-card img {
+  width: 200px;
 }
