--- a/Retrives-Manage-Books/src/App.css
+++ b/Retrives-Manage-Books/src/App.css
@@ -1,6 +1,12 @@
+a {
+  text-decoration: none;
+  color: #444;
+}
 .container {
   width: 100%;
   margin: 0 auto;
+  padding: 0 30px;
+  max-width: 800px;
 }
 img {
   width: 200px;
@@ -11,20 +17,25 @@ img {
   gap: 10px;
 }
 
-.main {
+.register {
+  max-width: 700px;
   padding: 30px;
   padding-bottom: 70px;
   margin-bottom: 20px;
+  margin: 0 auto;
 }
 
-button.active {
-  padding: 10px 20px;
+.btn.btn-active {
   background: #000;
   color: #fff;
 }
 
+.btn.btn-btn {
+  background: #ccc;
+  color: #111;
+}
+
 .btn-wrapper {
-  max-width: 85%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -36,6 +47,7 @@ button.active {
   background: #9f9f9f;
   padding: 10px 20px;
   border-radius: 10px;
+  text-align: center;
   border: none;
 }
 
@@ -47,10 +59,9 @@ button.active {
   border-radius: 10px;
 }
 /* form css start from here */
-.main-wrap {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+.signin-form {
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 label {
@@ -85,11 +96,14 @@ input {
 
 .book-card {
   width: 300px;
-  height: 400px;
+  height: 500px;
+  padding: 20px;
   border: 1px solid #ccc;
-  padding: 10px;
+  text-align: center;
   margin: 20px 0;
 }
+
 .book-card img {
   width: 200px;
+  height: 300px;
 }
