--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,7 @@ input:active {
   align-items: flex-start;
   display: flex;
   gap: 20px;
+  margin: 50px 0;
 }
 
 .book-detailsmeta {
@@ -162,4 +163,7 @@ input:active {
 .book-detailsmeta p {
   padding: 0;
   margin: 7px;
+}
+.book-detailsmeta h1 {
+  margin: 0;
 }
